@@ -1,7 +1,7 @@
 # My Study
 A student productivity desktop application, with apps such as a to-do list, pomodoro timer and drawboard all accessible from a central dashboard.
 ## Creators
-Created by the University of Auckland SoftEng310 group 5, the Council, for project 1. 
+Contributed to by the University of Auckland SoftEng310 2022 group 5 and group 2.
 ## Features
 Key features:
 - Central dashboard
@@ -17,11 +17,24 @@ Nice to have features:
 - Spotify integration 
 
 ## Getting Started
-You’ll need java, [javaFX](https://openjfx.io/openjfx-docs/) and [scenebuilder](https://gluonhq.com/products/scene-builder/) installed to be able to run this project. Then open the project in your IDE of choice and run it. 
+This project was built in Eclipse using Java.
+For best performance and support, use the Eclipse Java IDE.
+You'll also need to download [JavaFX](https://openjfx.io/openjfx-docs/), and the e(fx)clipse plugin, downloadable from the inbuilt Eclipse marketplace.
+Lastly, download the extra .jar dependencies from [here](https://www.mediafire.com/folder/nz54j5hnq1u5n/Dependencies)
+
+Project Setup:
+- Once you've opened up the project in Eclipse, go to the Project's Properties -> Java Build Path -> Module -> Add Library -> User Library
+- Click on the "User Libraries..." button, and create a new user library called "JavaFX"
+- Select "Add External JARs...", and select all of the .jar files in the JavaFX library folder, as well as the extra dependencies.
+- Go to the project's Run Configurations -> Arguments, and add "--module-path "\path\to\javafx-sdk-18.0.2\lib" --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.web
+
+Note: Your JavaFX version may be different, make sure to check the library folder and edit the version in the arguments accordingly
+
 ## Built With
 -	Java
 -	JavaFX
 -	Scenebuilder
+- CalendarFX Api
 ## Contributing
 Check out our [CONTRIBUTING.md](CONTRIBUTING.md)
 ## License
